<resources>
    <string name="app_name">RanchID</string>
    <string name="ranchid_logo">RanchID logo</string>
    <string name="fmard_logo">FMARD logo</string>
    <string name="naits_logo">NAITS logo</string>
    <string name="log_in">Log in</string>
    <string name="ranch_description">National Animal Identification\nand Traceability System</string>
    <string name="username">Username</string>
    <string name="username_hint">enter your username</string>
    <string name="username_icon">username_icon</string>
    <string name="password">Password</string>
    <string name="password_hint">enter your password</string>
    <string name="password_icon">password icon</string>
    <string name="forgot_password"><u>I forgot my password</u></string>
    <string name="login_to_account">Log in to your account</string>
    <string name="dashboard">Dashboard</string>
    <string name="role">Role: </string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="tags">Tags</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="add_livestock_owner">Add Livestock Owner</string>
    <string name="add_livestock_owner_icon">Add livestock owner icon</string>
    <string name="add_livestock_keeper_icon">add livestock keeper icon</string>
    <string name="location_icon">Location icon</string>
    <string name="add_livestock_keeper">Add Livestock Keeper</string>
    <string name="locations">Locations</string>
    <string name="tag_livestock">Tag Livestock</string>
    <string name="scan_for_exit_icon">Scan for abattoir exit icon</string>
    <string name="scan_for_exit_abattoir">Scan for Exit (Abattoir)</string>
    <string name="scan_for_other_icon">Scan for other exit icon</string>
    <string name="scan_for_exit_other">Scan for Exit (Other)</string>
    <string name="scan_for_sale_icon">Scan for sale icon</string>
    <string name="scan_for_sale">Scan for Sale</string>
    <string name="scan_for_owner_change_icon">Scan for owner change icon</string>
    <string name="scan_for_owner_change">Scan for Owner Change</string>
    <string name="scan_for_theft_or_loss_icon">Scan for theft or loss icon</string>
    <string name="scan_for_theft_loss">Scan for Theft/Loss</string>
    <string name="scan_for_border_crossing_icon">Scan for border crossing icon</string>
    <string name="scan_for_border_crossing">Scan for Border Crossing</string>
    <string name="scan_other_icon">Scan other icon</string>
    <string name="scan_other">Scan (Other)</string>
    <string name="list_livestock_owner_icon">List livestock owner icon</string>
    <string name="list_livestock_owner">List Livestock Owner</string>
    <string name="list_livestock_keeper_icon">List livestock keeper icon</string>
    <string name="list_livestock_keeper">List Livestock Keeper</string>
    <string name="list_registration_location_icon">List registration location icon</string>
    <string name="list_tagged_livestock_icon">List tagged livestock icon</string>
    <string name="step_01_03">Step 01/03</string>
    <string name="fill_details">Please fill out the following \ndetails.</string>
    <string name="ownership_type">Ownership Type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="booleantrue">True</string>
    <string name="booleanfalse">False</string>
    <string name="surname">Surname</string>
    <string name="other_names">Other Names</string>
    <string name="are_you_a_livestock_keeper">Are you a Livestock Keeper?</string>
    <string name="gender">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="email_hint">enter your email</string>
    <string name="email_icon">email_icon</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="date_icon">Date icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="nin">NIN</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="local_government_area">Local Government Area</string>
    <string name="select_lga">Select LGA</string>
    <string name="select_ownership_type">Select Ownership Type</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="step_02_03">Step 02/03</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="next_of_kin_phone_number">Next of Kin Phone Number</string>
    <string name="document_type">ID Document Type</string>
    <string name="select_document_type">Select Document Type</string>
    <string name="document_number">ID Document Number</string>
    <string name="farm_location">Farm Location</string>
    <string name="select_farm_location">Select Farm Location</string>
    <string name="capture_portrait">Capture Portrait</string>
    <string name="re_capture_portrait">Re-capture Portrait</string>
    <string name="camera_icon">camera icon</string>
    <string name="submit">Submit</string>
    <string name="select_state">Select State</string>
    <string name="owner_name">Owner\'s Name</string>
    <string name="location_name">Location Name</string>
    <string name="location_address">Location Address</string>
    <string name="location_type">Location Type</string>
    <string name="select_location_type">Select a Location Type</string>
    <string name="lga">LGA</string>
    <string name="add_livestock_location">Add Livestock Location</string>
    <string name="save">Save</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scanned_tag_id">Scanned Tag ID</string>
    <string name="step_01_04">Step 01/04</string>
    <string name="step_02_04">Step 02/04</string>
    <string name="scanned_tag">Scanned Tag ID</string>
    <string name="passport_id">Passport ID</string>
    <string name="livestock_keeper">Livestock Keeper</string>
    <string name="livestock_type">Livestock Type</string>
    <string name="livestock_breed">Livestock Breed</string>
    <string name="health_status">Health Status</string>
    <string name="select_birth_period">Select Birth Period</string>
    <string name="step_03_04">Step 03/04</string>
    <string name="capture_verification_details">Capture Verification Details</string>
    <string name="tagging_location">Tagging Location</string>
    <string name="comments_for_location">Comments for other Location</string>
    <string name="production_type">Production Type</string>
    <string name="description">Description</string>
    <string name="verification_photo">Verification Photo</string>
    <string name="muzzle_photo">Muzzle Photo</string>
    <string name="step_04_04">Step 04/04</string>
    <string name="form_summary">Form Summary</string>
    <string name="livestock_owner">Livestock Owner</string>
    <string name="comments">Comments</string>
    <string name="welcome">Welcome</string>
    <string name="your_activities">Your Activities</string>
    <string name="tagged_livestock">Tagged Livestock</string>
    <string name="exited_livestock">Exited Livestock</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="offline_function">Offline Function</string>
    <string name="edit_icon">Edit icon</string>
    <string name="cattle">Cattle</string>
    <string name="sheep">Sheep</string>
    <string name="goat">Goat</string>
    <string name="select_status">Select Status</string>
    <string name="select_gender">Select Sex</string>
    <string name="select_passport_id">Select Passport ID</string>
    <string name="select_livestock_type">Select Livestock Type</string>
    <string name="select_livestock_breed">Select Livestock Breed</string>
    <string name="select_tagging_location">Select Tagging Location</string>
    <string name="select_production_type">Select Production Type</string>
    <string name="select_livestock_keeper">Select Livestock Keeper</string>
    <string name="date_pattern">yyyy-MM-d</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="pick_image">Pick Image</string>
    <string name="re_pick_image">Re-pick Image</string>
    <string name="try_again">Try again!</string>
    <string name="menu">Menu</string>
    <string name="close">Close</string>
    <string name="sd_card">SD Card</string>
    <string name="select_livestock_owner">Select Livestock Owner</string>
    <string name="marital_status">Marital Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="add_new_owner">Add New Owner</string>
    <string name="good_job">Good Job!</string>
    <string name="go_back_to_dashboard">Go back to dashboard</string>
    <string name="livestock_owner_added_successfully">Livestock owner added successfully</string>
    <string name="oops">Oops</string>
    <string name="retry">Retry</string>
    <string name="livestock_keeper_added_successfully">Livestock keeper added successfully</string>
    <string name="add_new_keeper">Add New Keeper</string>
    <string name="something_went_wrong">Something went wrong with your\n submission. Let\'s try again.</string>
    <string name="location_added_successfully">Livestock location added successfully</string>
    <string name="add_new_location">Add New Location</string>
    <string name="tagged_successfully">%s Tagged Successfully</string>
    <string name="add_new_livestock">Add New Livestock</string>
    <string name="group_name">Group Name</string>
    <string name="cac_certificate_id">CAC Certificate ID</string>
    <string name="offline">You are offline</string>
    <string name="data_stored_offline">Data Stored Offline</string>
    <string name="step_03_03">Step 03/03</string>
    <string name="owner_photo">Owner Photo</string>
    <string name="keeper_photo">Keeper Photo</string>
    <string name="permission_required">Permission Required</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="congratulations">Congratulations!</string>
    <string name="update">Update</string>
    <string name="pending">PENDING</string>
    <string name="phone_nin_required">Phone Number and Nin are required</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="farm_location_download_failed">Failed to download Farm Location data from server</string>
    <string name="state_download_failed">Failed to download State data from server</string>
    <string name="lga_download_failed">Failed to download LGA data from server</string>
    <string name="owner_download_failed">Failed to download Owners data from server</string>
    <string name="keeper_download_failed">Failed to download Keeper data from server</string>
    <string name="dashboard_activity_download_failed">Failed to download Dashboard Activity data from server</string>
    <string name="unused_passport_download_failed">Failed to download Unused Passport data from server</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="location_lat_lon_warning">Check Internet Connection and Turn on Location in Phone Settings</string>
    <string name="incorrect_username_password">Incorrect Username or Password</string>
    <string name="online_support">Online Support</string>
    <string name="animal_tag_type">Animal Tag Type:</string>
    <string name="add_packing_list_icon">Add Packing List Icon</string>
    <string name="packing_list">Packing List</string>
</resources>