<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top"
        android:checkableBehavior="single">
        <item android:id="@+id/home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true"/>
        <item android:id="@+id/register_fragment"
            android:icon="@drawable/ic_register"
            android:title="@string/register"/>
        <item android:id="@+id/tag_fragment"
            android:icon="@drawable/ic_tag"
            android:title="@string/tags"/>
        <item android:id="@+id/offline_fragment"
            android:icon="@drawable/ic_offline"
            android:title="@string/offline_function"/>
        <item android:id="@+id/report_fragment"
            android:icon="@drawable/ic_report"
            android:title="@string/reports"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

    <!--<group
        android:id="@+id/bottom"
        android:checkableBehavior="single">
            <item android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
            <item android:id="@+id/help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"/>

    </group>-->

</menu>