<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/thirty_two_dp"
        android:paddingEnd="@dimen/thirty_two_dp"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/ranch_id_logo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:src="@drawable/logo_ranchid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/ranchid_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/log_in"
            app:fontFamily="@font/inter_bold"
            android:textSize="@dimen/eighteen_sp"
            android:textColor="@color/second_text_color"
            app:layout_constraintEnd_toEndOf="@id/naits_logo"
            app:layout_constraintStart_toStartOf="@id/ranch_id_logo"
            app:layout_constraintTop_toBottomOf="@id/ranch_id_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ranchid_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintEnd_toEndOf="@id/login"
            android:layout_marginTop="@dimen/eight_dp"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:fontFamily="@font/inter_regular"
            android:textColor="@color/second_text_color"
            android:text="@string/ranch_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/error_red"
            android:textAlignment="center"
            android:padding="@dimen/four_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            app:layout_constraintTop_toBottomOf="@id/ranchid_description"
            app:layout_constraintStart_toStartOf="@id/ranchid_description"
            app:layout_constraintEnd_toEndOf="@id/ranchid_description"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/offline_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline"
            android:drawableStart="@drawable/ic_warning"
            android:fontFamily="@font/inter_regular"
            android:background="@color/offline_background"
            android:textColor="@color/offline_text"
            android:padding="@dimen/four_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ranchid_description"
            app:layout_constraintStart_toStartOf="@id/ranchid_description"
            app:layout_constraintEnd_toEndOf="@id/ranchid_description"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email_txt_vw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/login_error"
            app:layout_constraintEnd_toEndOf="@id/login_error"
            app:layout_constraintTop_toBottomOf="@id/login_error"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/username"
            app:fontFamily="@font/inter_regular"
            android:textColor="@color/first_text_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_txt_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/email_txt_vw"
            app:layout_constraintEnd_toEndOf="@id/email_txt_vw"
            app:layout_constraintTop_toBottomOf="@id/email_txt_vw"
            android:layout_marginTop="@dimen/eight_dp"
            android:hint="@string/username_hint"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/hint_tint_color"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconContentDescription="@string/username_icon"
            app:startIconTint="@color/icon_tint_color"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/stroke_tint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.RanchId.TextInputEditText.Outlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/sixteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/password_txt_vw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/email_txt_ip"
            app:layout_constraintEnd_toEndOf="@id/email_txt_ip"
            app:layout_constraintTop_toBottomOf="@id/email_txt_ip"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/password"
            app:fontFamily="@font/inter_regular"
            android:textColor="@color/first_text_color" />

<!--try passwordtoggleenable=true-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_txt_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/password_txt_vw"
            app:layout_constraintEnd_toEndOf="@id/password_txt_vw"
            app:layout_constraintTop_toBottomOf="@id/password_txt_vw"
            android:layout_marginTop="@dimen/eight_dp"
            android:hint="@string/password_hint"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/hint_tint_color"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconContentDescription="@string/password_icon"
            app:startIconTint="@color/icon_tint_color"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/stroke_tint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.RanchId.TextInputEditText.Outlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/sixteen_sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp"
            app:layout_constraintStart_toStartOf="@id/password_txt_ip"
            app:layout_constraintEnd_toEndOf="@id/password_txt_ip"
            app:layout_constraintTop_toBottomOf="@id/password_txt_ip"
            android:text="@string/forgot_password"
            android:textColor="@color/second_text_color"
            android:fontFamily="@font/inter_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/forgot_password"
            app:layout_constraintEnd_toEndOf="@id/forgot_password"
            app:layout_constraintTop_toBottomOf="@id/forgot_password"
            android:layout_marginTop="@dimen/thirty_two_dp"
            android:textAllCaps="false"
            android:textSize="@dimen/sixteen_sp"
            android:text="@string/login_to_account"
            android:textColor="@color/white"
            android:paddingTop="@dimen/sixteen_dp"
            android:paddingBottom="@dimen/sixteen_dp"
            android:backgroundTint="@color/btn_color"
            android:fontFamily="@font/inter_regular"/>

        <ImageView
            android:id="@+id/fmard_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_fmard"
            android:layout_marginStart="@dimen/eight_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            android:contentDescription="@string/fmard_logo" />

        <ImageView
            android:id="@+id/naits_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_naits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fmard_logo"
            app:layout_constraintBottom_toBottomOf="@id/fmard_logo"
            app:layout_constraintStart_toStartOf="@id/guideline"
            android:contentDescription="@string/naits_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".50" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            app:layout_constraintTop_toTopOf="@id/login_button"
            android:visibility="invisible"
            app:indicatorColor="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>